fixed the white gap between body and footer

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -4,15 +4,18 @@
     padding:0;
   }
 
+
+
   body {
     font-family: Arial;
-    margin: 0;
+    margin: 0px;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height:100vh;
     justify-content: flex-start;
+    
   }
-
+ 
 header {
   display: flex;
   justify-content: space-between;
@@ -55,23 +58,31 @@ nav a {
 main {
     display: flex;
     flex-wrap: wrap;
+    width: 100vw;
+    height:100%;
+    
   }
   
   aside {
     flex: 1;
-  background-color: #445065;
   padding: 20px;
-  margin: 1px;
+  margin: 0px;
+  width: 20%;
+  min-height:fit-content;
+  /* height: 100%; */
+  
 }
     
   
   aside h1{
+    height:auto;
     font-style: normal;
     text-align:center;
     margin-top: 10%;
   }
 
   aside p{
+    margin-top: 2%;
     font-style: italic;
     font-size: 20px;
     text-align: center;
@@ -79,8 +90,11 @@ main {
   }
   
   footer {
+    position:fixed;
+    bottom: 0;
     display:flex;
-    margin-top: 0;
+    width: 100%;
+    /* margin-top: 0; */
     justify-content: space-between;
     
     padding:25px;
@@ -88,7 +102,11 @@ main {
   }
 
   #aboutme {
+    background-color: #445065;
     display: block;
+    width: 25%;
+    min-height:  90px;
+    /* height: 100%; */
   }
 
   #workheader{
@@ -109,7 +127,7 @@ main {
   width: 100%;
   padding: 20px;
   height: 200px;
-  margin: ;
+  margin: 5px 1px 5px;
   border: 1px solid black;
 }
   
@@ -122,6 +140,12 @@ main {
     /* flex-wrap: wrap; */
     justify-content:center;
     align-items: flex-start;
+  }
+
+  .work{
+    flex:2;
+    width: 80%;
+
   }
   
   
